WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282717
[css-masonry] Fix orthogonal item writing mode widths in masonry columns
https://bugs.webkit.org/show_bug.cgi?id=282717
Summary
[css-masonry] Fix orthogonal item writing mode widths in masonry columns
Brandon
Reported
2024-11-06 14:24:40 PST
When there is a vertical writing mode in grid-template-columns: masonry, we should not be overriding the logical widths in the min/max content phases. This could cause a large gap at the end of the grid. I needed to update test case 05 to handle the new widths. Also, we have a bug where we need to adopt to the new behavior of definite items not being placed first anymore. This was changed in the spec recently.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-06 14:25:22 PST
<
rdar://problem/139385456
>
Brandon
Comment 2
2024-11-07 08:07:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36329
EWS
Comment 3
2024-11-07 19:58:05 PST
Committed
286314@main
(6c070b3d74c4): <
https://commits.webkit.org/286314@main
> Reviewed commits have been landed. Closing PR #36329 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug