[css-masonry] Fix orthogonal item writing mode widths in masonry columns https://bugs.webkit.org/show_bug.cgi?id=282717 rdar://problem/139385456

Reviewed by Sammy Gill.

When there is a vertical writing mode in grid-template-columns: masonry, we should not be overriding the logical widths in the min/max content phases.
This could cause a large gap at the end of the grid.

When we are in shouldOverrideLogicalWidth(), if we get past the 'if (layoutPhase == MasonryLayoutPhase::LayoutPhase)' we know we must be in masonry columns,
because this will only be called in the computeIntrinsicSizes.

Test Case:
I needed to update test case 05 to handle the new widths.
Our impementation uses the old spec definition where definite items were placed first. That is no longer true, thus needing to update the base test case.

* LayoutTests/TestExpectations:
* LayoutTests/platform/mac-wk1/TestExpectations
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/intrinsic-sizing/masonry-intrinsic-sizing-rows-005-expected.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/intrinsic-sizing/masonry-intrinsic-sizing-rows-005-ref.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/intrinsic-sizing/masonry-intrinsic-sizing-rows-005.html:
* Source/WebCore/rendering/GridMasonryLayout.cpp:
(WebCore::GridMasonryLayout::insertIntoGridAndLayoutItem):

Canonical link: https://commits.webkit.org/286314@main